--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,8 @@
     <ion-menu contentId="main-content" type="overlay" *ngIf="!isLoginPage">
       <ion-content>
         <ion-list id="inbox-list">
-          <ion-list-header>Inbox</ion-list-header>
-          <ion-note>hi@ionicframework.com</ion-note>
+          <ion-list-header>MuniResponse</ion-list-header>
+          <ion-note>{{ email }}</ion-note>
 
           <ion-menu-toggle
             auto-hide="false"
