--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -4,7 +4,7 @@
       <h3 class="welcome__text">Welcome Ibaeno's</h3>
       <p class="signin__text">Sign in to continue</p>
       <h1 class="title">MDRRMC IBAAN</h1>
-      <div class="error">{{error }}</div>
+      <div class="error" *ngIf="error">{{ error }}</div>
       <ion-input
         label="Email address"
         label-placement="floating"
@@ -12,13 +12,17 @@
         placeholder="Enter email address"
         [(ngModel)]="email"
       ></ion-input>
-      <ion-input
-        label="Password"
-        label-placement="floating"
-        fill="outline"
-        placeholder="Enter password"
-        [(ngModel)]="password" type="password"
-      ></ion-input>
+      <div class="password-container">
+        <!-- New container for password and button -->
+        <ion-input
+          label="Password"
+          label-placement="floating"
+          fill="outline"
+          placeholder="Enter password"
+          [(ngModel)]="password"
+          [type]="showPassword ? 'text' : 'password'"
+        ></ion-input>
+      </div>
       <ion-button expand="full" (click)="login()">Login</ion-button>
     </div>
   </section>
