--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -20,5 +20,11 @@
     .title {
       text-align: center;
     }
+    .error {
+      padding: 10px 20px;
+      text-align: center;
+      background-color: rgba(255, 61, 61, 0.451);
+      margin-bottom: 10px;
+    }
   }
 }
